Refactoring, Internal proxy started